Closed
Bug 1414451
Opened 8 years ago
Closed 7 years ago
Interactive controls in third-party devtools webextensions announced as 'unknown' in NVDA
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
VERIFIED
FIXED
mozilla59
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox57 | --- | wontfix |
| firefox58 | --- | verified |
| firefox59 | --- | verified |
People
(Reporter: marcy.sutton, Assigned: eeejay)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.32 KB,
patch
|
bugzilla
:
review+
gchang
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36
Steps to reproduce:
- Download and install the latest NVDA screen reader from https://www.nvaccess.org
- Install a third-party webextensions addon (https://github.com/mdn/webextensions-examples/tree/master/devtools-panels)
- Open the devtools and navigate to the third-party addon
- Tab through the controls in the addon
Actual results:
NVDA announces 'unknown' for all interactive controls in the devtools addon. If you hover over them with your mouse, the correct information is heard. But with the keyboard, all we hear is 'unknown'.
Expected results:
NVDA should read accessibility information when the TAB key is pressed.
Updated•8 years ago
|
Component: Untriaged → Developer Tools
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → eitan
| Assignee | ||
Comment 1•7 years ago
|
||
This may not be 100% right, but it works! Essentially, the extensions document is two documents removed from the AccessibleWrap's document.
Attachment #8927489 -
Flags: review?(aklotz)
| Assignee | ||
Comment 2•7 years ago
|
||
Meaning, the accessible's document is an ancestor, and not a direct parent of the remote doc.
| Assignee | ||
Updated•7 years ago
|
Component: Developer Tools → Disability Access APIs
Product: Firefox → Core
Updated•7 years ago
|
Attachment #8927489 -
Flags: review?(aklotz) → review+
| Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/33f70e1ee060
Check that both documents share the same root. r=aklotz
Keywords: checkin-needed
Comment 4•7 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
status-firefox59:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Comment 5•7 years ago
|
||
Eitan, is this a candidate for uplift to 58? It's a regression from our Windows E10S a11y work.
status-firefox57:
--- → wontfix
status-firefox58:
--- → affected
status-firefox-esr52:
--- → unaffected
Flags: needinfo?(eitan)
Keywords: regression
| Assignee | ||
Comment 6•7 years ago
|
||
Comment on attachment 8927489 [details] [diff] [review]
Check that both documents share the same root. r?aklotz
Approval Request Comment
[Feature/Bug causing the regression]: a11y e10s
[User impact if declined]: Screen reader users will not be able to access addon devtools panels.
[Is this code covered by automated tests?]: No.
[Has the fix been verified in Nightly?]: Yes.
[Needs manual test from QE? If yes, steps to reproduce]: STR is in the bug summary.
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: Not positive about the risk. We are early enough in the cycle that we can post followups.
[Why is the change risky/not risky?]:
[String changes made/needed]: None.
Flags: needinfo?(eitan)
Attachment #8927489 -
Flags: approval-mozilla-beta?
Comment 7•7 years ago
|
||
Comment on attachment 8927489 [details] [diff] [review]
Check that both documents share the same root. r?aklotz
Fix an a11y issue. Beta58+.
Hi Brindusa, could you help find someone to verify if this issue was fixed as expected on the latest Nightly build? Thanks!
Flags: needinfo?(brindusa.tot)
Attachment #8927489 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Reproduced the issue on Windows 10 x64 using Nightly 58.0a1 (2017-11-03).
Verified fixed using the latest Nightly 59.0a1 (2017-11-19)on Windows 10 x64.
Comment 9•7 years ago
|
||
| bugherder uplift | ||
Updated•7 years ago
|
Flags: qe-verify+
Comment 10•7 years ago
|
||
I have managed to reproduce the issue described in comment 0 using Firefox 58.0a1 (BuildId:20171103220715).
This issue is verified fixed using Firefox 58.0b5 (BuildId:20171120142222) on Windows 10 64bit with NVDA v 2017.2.
Flags: qe-verify+
You need to log in
before you can comment on or make changes to this bug.
Description
•