Bug 1414451 - Check that both documents share the same root. r=aklotz a=gchang